[package]
name = "microrust"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.5"
microbit = "0.15.1"
panic-halt = "1.0.0"

[dev-dependencies]
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
